# oncodashkb

./: .gitattributes  .gitignore  .klyban.csv  .pre-commit-config.yaml  README.md  anonymize_table.py  biocypher_config.yaml  build_kg.py  extract_decider.sh  import.report  make.py  make.sh  make_linux.sh  make_macos.sh  oncodashkb-mapping.ods  prepare.sh  pyproject.toml  weave.py
.task/: backlog.data  completed.data  pending.data  undo.data
config/: biocypher_config.yaml  biopathnet.yaml  neo4j.yaml  owl.yaml  schema.yaml  schema_config.yaml
docs/: oncodashkb-mapping.ods
hooks/: install_hooks.sh  leaking-data  pre-commit  pre-push
oncodashkb/adapters/: Ensembl_genes.conf  GO_genes.conf  README.md  __init__.py  base.py  cgi.py  cgi.yaml  clinical-timeline.yaml  clinical.py  clinical.yaml  copy_number_alterations.yaml  copy_number_alterations_local.yaml  copy_number_amplifications_external.yaml  copy_number_amplifications_external_oncokb.yaml  copy_number_amplifications_local.yaml  copy_number_amplifications_samples.yaml  gene_ontology.py  gene_ontology.yaml  gene_ontology_reverse.yaml  germline.yaml  networks.yaml  oncokb.py  oncokb.yaml  oncokb_gene_status.yaml  open_targets.py  open_targets.yaml  open_targets_diseases.py  open_targets_diseases.yaml  open_targets_drugs.py  open_targets_drugs.yaml  open_targets_evidences.py  open_targets_evidences.yaml  short_mutations_external.yaml  short_mutations_external_oncokb.yaml  short_mutations_local.yaml  short_mutations_samples.yaml  single_nucleotide_variants.yaml  single_nucleotide_variants_local.yaml  small_molecules.yaml  snv.py  (+11 more)
oncodashkb/transformers/: escat_tier_transformer.py  specific_translate_transformers.py
oncodashkb/validators/: copy_number_amplification_local.yaml  copy_number_amplifications_external.yaml  short_mutations_external.yaml  short_mutations_local.yaml
ontoweaver/: transformer.py
tests/: genomics_oncokbannotation.csv  oncodash_fake.py  oncokb_example.yaml  test_matta.py
