[project]
name = "oncodashkb"
version = "0.1.0"
description = "Knowledge graph build for oncodash using BioCypher"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  "biocypher>=0.11.0,<0.12",
  "pooch>=1.7.0,<2.0",
  "pandas>=2.3.1,<3.0",
  "owlready2>=0.49,<1.0",
  "numpy>=2.2.0,<3.0",
  "ipykernel>=6.29.5,<7.0",
  "matplotlib>=3.10.0,<4.0",
  "polars>=1.22.0,<2.0",
  "seaborn>=0.13.2,<0.14",
  "ontoweaver @ git+https://github.com/mbaric758/ontoweaver.git",
  "pre-commit>=4.5.0",
  "openpyxl>=3.1.5",
]

[tool.poetry.dependencies]
python = "^3.12"
biocypher = "^0.11.0"
ontoweaver = {git = "https://github.com/mbaric758/ontoweaver.git"}
pooch = "^1.7.0"
pandas = "^2.3.1"
owlready2 = "^0.49"
pyarrow = "^20.0.0"
numpy = "^2.2.0"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
polars = "^1.22.0"
seaborn = "^0.13.2"


[dependency-groups]
dev = [
  "pytest>=8.4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["oncodashkb"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"