[project]
name = "oncodashkb"
version = "0.3.0"
description = "Knowledge graph build for oncodash using BioCypher"
readme = "README.md"
requires-python = ">=3.12,<4.0"
package-mode = false
authors = [
    { name = "Johann Dreo", email = "johann.dreo@pasteur.fr" },
    { name = "Marko Baric", email = "marko.baric@pasteur.fr" },
    { name = "Matthieu Najm", email = "matthieu.najm@pasteur.fr" },
    { name = "Benno Schwikowski", email = "benno.schwikowski@pasteur.fr" },
]

dependencies = [
  "biocypher>=0.12.0,<0.13",
  "pooch>=1.7.0,<2.0",
  "pandas>=2.3.1,<3.0",
  "owlready2>=0.49,<1.0",
  "numpy>=2.2.0,<3.0",
  "ipykernel>=6.29.5,<7.0",
  "matplotlib>=3.10.0,<4.0",
  "polars>=1.22.0,<2.0",
  "seaborn>=0.13.2,<0.14",
  "ontoweaver>=1.4.0,<1.5.0",
  "openpyxl>=3.1.5",
  "pyarrow>20.0.0",
  "fastparquet<2026.3.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.0",
  "pytest>=8.4.1",
]